Minor site changes
Changed options to View or Download
iPhone touchstart event

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<div class="span8 list">
 					<div>
 						js-reusable-input
-						<a href="https://github.com/jjshammas/js-reusable-input">Download</a>
-						<a href="js-reusable-input">Demo</a>
+						<a href="https://github.com/jjshammas/lab/tree/master/js-reusable-input">Download</a>
+						<a href="js-reusable-input">View</a>
 						<small>Easier typing in commonly used text inputs</small>
 					</div>
 				</div>
