--- a/js-reusable-input/index.html
+++ b/js-reusable-input/index.html
@@ -28,7 +28,7 @@
 					<a id="logo" href="/"></a>
 					<a href="/">&#8592; Back</a>
 				</nav>
-				<h1>js-reusable-input <a class="primary download" href="https://github.com/jjshammas/lab"><span>Download on</span> GitHub</a></h1>
+				<h1>js-reusable-input <a class="primary github" href="https://github.com/jjshammas/lab/tree/master/js-reusable-input"><span>View on</span> GitHub</a><a class="primary download" href="">Download <span>1kb</span></a></h1>
 			</div>
 		</header>
 		<div class="container">
